# AllocatorCpp

./: .gitignore  AllocatorCpp.10x  CMakeLists.txt  build.bat  meson.build
lib/: Dependencies.cmake
src/: Define.hpp  main.cpp
src/allocator/: allocator.hpp  linear_allocator.cpp  linear_allocator.hpp
src/base/: slice.hpp
tests/: linear_allocator_test.cpp
